--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="profile-name">fora</div>
     <div class="profile-bio">#2018</div>
     <div class="links">
-      <a class="link-btn" href="https://instagram.com/forasexual" target="_blank" rel="noopener noreferrer">IG</a>
+      <a class="link-btn" href="https://instagram.com/forasexual" target="_blank" rel="noopener noreferrer">Instagram</a>
     </div>
   </div>
 
